@@ -20,7 +20,19 @@ class ShoppingCartUtility(Persistent):
     def __init__(self):
         self._sessions = OOBTree()
 
-
+    #
+    # A quick description of the different cart types:
+    #
+    # user: This cart is associated with a logged in user.  It persists 
+    #       across sessions
+    # session: This cart is tied to a browser session.  It will be associated
+    #          with the current user if get is called with a logged in user
+    # oneshot: This is a single use cart.  Calling get with key="oneshot:*" 
+    #          always returns a new cart
+    # multishot: A multishot cart is associated with a browser session, but
+    #            can not be converted to a user cart.  The session can have
+    #            multiple multishot carts.  They are used if multiple
+    #            components need to act on a cart.
     def get(self, context, create=False, key=None):
         """ Get the persistent cart. It does not persist for anonymous users or
         one time only usage (things like one page buy and checkout)
@@ -36,6 +48,8 @@ class ShoppingCartUtility(Persistent):
                 return self._getCartForSession(context, browser_id=value)
             elif name == 'oneshot':
                 return self._getDisposableCart(context, browser_id=value)
+            elif name == 'multishot':
+                return self._getMultiShotCart(context, cart_id=value)
         else:
             uid = getSecurityManager().getUser().getId()
             if uid is not None:
@@ -80,6 +94,17 @@ class ShoppingCartUtility(Persistent):
     def _getDisposableCart(self, context, browser_id=None):
         return ShoppingCart()
         
+    def _getMultiShotCart(self, context, cart_id=None):
+        session_manager = getToolByName(context, 'session_data_manager')
+
+        key = "getpaid.cart.%s" % cart_id
+
+        session = session_manager.getSessionData()
+
+        if not session.has_key(key):
+            session[key] = cart = ShoppingCart()
+
+        return session[key]
 
 
     def destroy(self, context, key=None):
@@ -91,6 +116,8 @@ class ShoppingCartUtility(Persistent):
                 return self._destroyCartForUser(context, value)
             elif name == 'session':
                 return self._destroyCartForSession(context, value)
+            elif name == 'multishot':
+                return self._destroyMultiShotCart(context, value)
         else:
             uid = getSecurityManager().getUser().getId()
             if uid is not None:
@@ -118,6 +145,16 @@ class ShoppingCartUtility(Persistent):
             return
         del session['getpaid.cart']
 
+    def _destroyMultiShotCart(self, context, cart_id=None):
+        session_manager = getToolByName(context, 'session_data_manager')
+
+        key = "getpaid.cart.%s" % cart_id
+        session = session_manager.getSessionData()
+
+        if not session.has_key(key):
+            return
+
+        del session[key]
 
     def getKey(self, context):
         """Return key that can be used to recover the cart for the
@@ -141,7 +178,7 @@ class ShoppingCartUtility(Persistent):
             name, value = key.split(':', 1)
         except ValueError:
             raise ValueError('Malformed key: %s' % key)
-        if name not in ['user', 'session', 'oneshot']:
+        if name not in ['user', 'session', 'oneshot', 'multishot']:
             raise ValueError('Malformed key: %s' % key)
         return name, value
 
